minor spacing corrections

--- a/style/page.css
+++ b/style/page.css
@@ -14,7 +14,7 @@ figcaption {
 }
 
 .video {
-	margin: 40px 0;
+	margin: 30px 0;
 }
 
 .page-wrapper {
